@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r8p19
+  {
+    Modules = LHCbDIRAC:v8r8p19, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p33
+    LcgVer = 2017-05-23
+  }
+
   v8r8p18
   {
     Modules = LHCbDIRAC:v8r8p18, LHCbWebDIRAC:v4r3p3
