@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p18",
+  "version": "v8r8p19",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p32",
+      [ "Dirac", "v6r17p33",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r14",
